--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gen:certificates": "mkcert -cert-file cert.pem -key-file cert-key.pem localhost.template-angular-app.dndmapp.dev localhost 127.0.0.1",
     "build": "pnpm exec ng build",
     "build:dev": "pnpm exec ng build -c dev",
+    "test:install-browsers": "pnpm exec playwright install chromium --with-deps",
     "test": "pnpm exec vitest run",
     "test:dev": "pnpm exec vitest --ui",
     "test:coverage-reports": "pnpm exec vite preview --outDir ./reports --open",
@@ -17,7 +18,6 @@
     "stylelint": "pnpm exec stylelint \"**/*.scss\"",
     "format:check": "pnpm exec prettier -l .",
     "format:write": "pnpm exec prettier -w .",
-    "playwright:install-browsers": "pnpm exec playwright install chromium",
     "docker:check": "docker buildx build -f .docker/Dockerfile --check .",
     "docker:build": "docker buildx build -f .docker/Dockerfile -t dndmapp/template-angular-app:latest .",
     "docker:bake": "docker buildx bake -f .docker/docker-bake.hcl",
