--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "packageManager": "pnpm@10.26.2",
   "scripts": {
     "start": "pnpm exec ng serve",
+    "start:http": "pnpm exec ng serve -c http",
     "gen:version": "node build/write-version.mts",
     "gen:certificates": "mkcert -cert-file cert.pem -key-file cert-key.pem localhost.template-angular-app.dndmapp.dev localhost 127.0.0.1",
     "build": "pnpm exec ng build",
