Add dependencies to run E2E tests with playwright

--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "@angular/build": "~21.0.0",
     "@angular/cli": "~21.0.0",
     "@angular/compiler-cli": "~21.0.0",
+    "@dotenvx/dotenvx": "~1.51.0",
     "@eslint/js": "~9.39.0",
+    "@playwright/test": "~1.57.0",
     "@types/node": "~24.10.0",
     "@vitest/browser-playwright": "~4.0.0",
     "@vitest/coverage-v8": "~4.0.0",
