Add playwright config, basic test and scripts to run E2E tests

--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "test": "pnpm exec vitest run",
     "test:dev": "pnpm exec vitest --ui",
     "test:coverage-reports": "pnpm exec vite preview --outDir ./reports/unit-tests --open",
+    "e2e:install-browsers": "pnpm exec playwright install chromium firefox webkit --with-deps",
+    "e2e": "pnpm exec playwright test -c e2e/playwright.config.ts",
+    "e2e:dev": "pnpm exec playwright test -c e2e/playwright.config.ts --ui",
     "lint": "pnpm exec ng lint",
     "stylelint": "pnpm exec stylelint \"**/*.scss\"",
     "format:check": "pnpm exec prettier -l .",
