--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -37,3 +37,23 @@ jobs:
                   docker-password: ${{ secrets.DOCKER_PASSWORD }}
                   docker-image-name: template-angular-app
                   docker-image-tags: ${{ join(fromJSON(steps.metadata.outputs.json).tag-names, ',') }}
+    e2e:
+        name: E2E testing (Smoke)
+        runs-on: ubuntu-22.04
+        needs:
+            - docker-build
+        steps:
+            - name: Checkout repository
+              uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
+
+            - name: Set up tools
+              uses: ./.github/actions/setup-tools
+
+            - name: Install browsers
+              shell: bash
+              run: pnpm e2e:install-browsers
+
+            # TODO: Add `@smoke` or no tag depending on branch of PR.
+            - name: Run smoke tests
+              shell: bash
+              run: pnpm e2e
