--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "e2e:dev": "pnpm exec playwright test -c e2e/playwright.config.ts --ui",
     "lint": "pnpm exec ng lint",
     "stylelint": "pnpm exec stylelint \"**/*.scss\"",
+    "markdownlint": "pnpm exec markdownlint \"**/*.md\"",
     "format:check": "pnpm exec prettier -l .",
     "format:write": "pnpm exec prettier -w .",
     "docker:check": "docker buildx build -f .docker/Dockerfile --check .",
@@ -58,6 +59,8 @@
     "angular-eslint": "21.1.0",
     "eslint": "~9.39.0",
     "eslint-config-prettier": "~10.1.0",
+    "markdownlint": "~0.40.0",
+    "markdownlint-cli": "~0.47.0",
     "playwright": "~1.57.0",
     "prettier": "~3.7.0",
     "prettier-plugin-organize-imports": "~4.3.0",
