--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=827846
     "recommendations": [
         "angular.ng-template",
+        "bradlc.vscode-tailwindcss",
         "dbaeumer.vscode-eslint",
         "prettier.prettier-vscode",
         "stylelint.vscode-stylelint"
