--- a/.prettierrc
+++ b/.prettierrc
@@ -13,7 +13,7 @@
             }
         }
     ],
-    "plugins": ["prettier-plugin-organize-imports"],
+    "plugins": ["prettier-plugin-organize-imports", "prettier-plugin-tailwindcss"],
     "printWidth": 120,
     "quoteProps": "consistent",
     "singleQuote": true,
