--- a/package.json
+++ b/package.json
@@ -38,7 +38,10 @@
     "@angular/forms": "~21.0.0",
     "@angular/platform-browser": "~21.0.0",
     "@angular/router": "~21.0.0",
+    "@tailwindcss/postcss": "~4.1.0",
+    "postcss": "~8.5.0",
     "rxjs": "~7.8.0",
+    "tailwindcss": "~4.1.0",
     "tslib": "~2.8.0"
   },
   "devDependencies": {
@@ -64,6 +67,7 @@
     "playwright": "~1.57.0",
     "prettier": "~3.7.0",
     "prettier-plugin-organize-imports": "~4.3.0",
+    "prettier-plugin-tailwindcss": "~0.7.0",
     "stylelint": "~16.26.0",
     "stylelint-config-standard-scss": "~16.0.0",
     "typescript": "~5.9.0",
