--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -33,6 +33,29 @@ jobs:
                   echo "version=$VERSION" >> "$GITHUB_OUTPUT"
                   echo "tags=$TAGS" >> "$GITHUB_OUTPUT"
 
+            - name: Extract changelog section
+              id: changelog
+              shell: bash
+              env:
+                  CORE: ${{ steps.prepare-tags.outputs.core }}
+              run: |
+                  set -euo pipefail
+
+                  # Capture section to a variable
+                  NOTES="$(pnpm changelog:extract 2>/dev/null || true)"
+
+                  if [ -z "$NOTES" ]; then
+                    echo "No changelog section found for version $CORE" >&2
+                    NOTES="Release $CORE"
+                  fi
+
+                  # Escape for GitHub output
+                  NOTES="${NOTES//'%'/'%25'}"
+                  NOTES="${NOTES//$'\n'/'%0A'}"
+                  NOTES="${NOTES//$'\r'/'%0D'}"
+
+                  echo "notes=$NOTES" >> "$GITHUB_OUTPUT"
+
             - name: Create Docker image
               uses: ./.github/actions/docker-build
               with:
@@ -48,3 +71,4 @@ jobs:
                   tag_name: ${{ steps.prepare-tags.outputs.version }}
                   prerelease: false
                   make_latest: true
+                  body: ${{ steps.changelog.outputs.notes }}
